Analisar Candidatos